Home page content added

--- a/about.html
+++ b/about.html
@@ -7,12 +7,19 @@
 <body>
     <nav>
         <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
     </nav>
     <div class="container">
-        <h1>About Us</h1>
-        <p>This is the about page.</p>
+        <h1>Projects in icog</h1>
+        <ul>
+            <li>Hyperon</li>
+            <li>Mindplex</li>
+            <li>MOSES</li>
+            <li>ECAN</li>
+            <li>NAC</li>
+            <li>Pattern Miner</li>
+            <li>Robotics</li>
+            <li>Quantum</li>
+          </ul> 
     </div>
 </body>
 </html>
