--- a/contact.html
+++ b/contact.html
@@ -7,11 +7,9 @@
 <body>
     <nav>
         <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
     </nav>
     <div class="container">
-        <h1>Contact Us</h1>
+        <h1>Write to me</h1>
         <form>
             <label for="name">Name:</label>
             <input type="text" id="name" name="name"><br><br>
