--- a/index.html
+++ b/index.html
@@ -41,13 +41,27 @@
             <li>Neo4j Fundamentals</li>
             <li>Neo4j Cypher Fundamentals</li>
         </ul>
-        <h3>Taskes I have done</h3>
+        <h3>Tasks I have done</h3>
         <ul style="list-style-type: square;">
     
             <li>Chunking into tokens for embedding</li>
             <li>Immproving prompt to summarizing graph</li>
             <li>Improve prompt to list key points and urls in a pdf file</li>
         </ul>
+        <h3>Trainings I have taken</h3>
+        <ul style="list-style-type: square;">
+    
+            <li>Training on Blockchain</li>
+            <li>Training on Cognitive architecture</li>
+            <li>Training on metta</li>
+            <li>Training on OpenCog's attention allocation system with different MindAgents</li>
+            <li>Training on Functional Programming</li>
+            <li>Training on CICD with github actions</li>
+            <li>Training on RAG</li>
+            <li>Training on Prompt Engineering</li>
+            <li>Training on Neo4J</li>
+        </ul>
+        <p>The journey continues...</p>
     </div>
 </body>
 </html>
