--- a/about.html
+++ b/about.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
@@ -9,7 +11,7 @@
         <a href="index.html">Home</a>
     </nav>
     <div class="container">
-        <h1>Projects in icog</h1>
+        <h1>Projects at iCog</h1>
         <ul>
             <li>Hyperon</li>
             <li>Mindplex</li>
@@ -19,7 +21,7 @@
             <li>Pattern Miner</li>
             <li>Robotics</li>
             <li>Quantum</li>
-          </ul> 
+        </ul>
     </div>
 </body>
 </html>
