--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
@@ -9,8 +11,8 @@
         <a href="index.html">Home</a>
     </nav>
     <div class="container">
-        <h1>Write to me</h1>
-        <form>
+        <h1>Write to Me</h1>
+        <form action="submit_form.php" method="post">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name"><br><br>
             <label for="email">Email:</label>
