--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 <li>Complete online courses</li>
                 <li>Write weekly reports</li>
                 <li>Maintain 10 hours of office presence per week</li>
+                <li>Publish atleast one article</li>
             </ol>
             <p>I consider myself incredibly fortunate to have been paired with one of the best mentors at iCog Labs. After an insightful conversation, we carefully selected a series of online courses to help me build the necessary skills for the project. I began taking these courses one by one, diving into the learning process and expanding my knowledge step by step.</p>
         </section>
@@ -61,6 +62,14 @@
                 <li>Training on RAG</li>
                 <li>Training on Prompt Engineering</li>
                 <li>Training on Neo4J</li>
+            </ul>
+            <h3>Articles I Have Reviewed</h3>
+            <ul>
+                <li>Article on KIBRA and PKMζ interaction</li>
+                <li>Article on Geometry of concepts</li>
+                <li>Reviewed article on Emergence of Hidden Capabilities: Exploring Learning Dynamics in Concept Space</li>
+                <li>Unveiling Hidden Learning Dynamics in Generative ModelsUnveiling Hidden Learning Dynamics in Generative Models</li>
+                <li>Algebraic Positional Encoding for Improved Transformer Models</li>
             </ul>
         </section>
 
